--- a/course-manager-server/package.json
+++ b/course-manager-server/package.json
@@ -2,7 +2,7 @@
   "name": "course-manager-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "serve.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
